# tree-sitter-proto

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: ci.yml  lint.yml  release.yml
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: edition.txt  message.txt
test/highlight/: highlights.proto
