[package]
name = "tree-sitter-proto"
description = "Parser for proto2 and proto3 files"
version = "0.2.0"
authors = ["Mohammad Ashar Khan <ashar786khan@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "proto"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/coder3101/tree-sitter-proto"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
